# Puzzle

./: Alle.h  CMakeLists.txt  Project.vcxproj  Project.vcxproj.filters  Puzzel.cpp  Puzzel.h  Puzzel0.h  Puzzel1.cpp  Puzzel1.h  Puzzel12.cpp  Puzzel12.h  Puzzel14.cpp  Puzzel14.h  Puzzel21.cpp  Puzzel21.h  Puzzel22.cpp  Puzzel22.h  Puzzel22dr.cpp  Puzzel22dr.h  Puzzel41.cpp  Puzzel41.h  alle.cpp  board.cpp  board.h  buttons.cpp  buttons.h  main.cpp  structs.h
